# delivery-loggy-test

./: .gitignore  README.md  docker-compose.yml  manifest-dev.yml  manifest-preprod.yml  manifest-prod.yml  pyproject.toml  test.json
delivery/: Dockerfile  Makefile  docker-entrypoint.sh  pyproject.toml  pytest.ini
delivery/api/: __init__.py  __main__.py  auth.py  conf.py  context_vars.py  database.py  exceptions.py  executors.py  helpers.py  logging_module.py  middlewares.py  monitoring.py  redis_module.py  responses.py  security.py  times.py  verification.py
delivery/api/business_exceptions/: base.py
delivery/api/common/: __init__.py  error_base.py  repository_base.py  schema_base.py  validators.py
delivery/api/controllers/: __init__.py  area.py  biometry.py  category.py  country.py  deliverygraph.py  direction.py  external_service_history.py  feedback.py  firebase.py  group.py  history.py  item.py  monitoring.py  order.py  otp.py  partner.py  permission.py  place.py  postcontrol.py  profile.py  public_api_token.py  register.py  statistics.py  status.py  token.py  transport.py  user.py  verification.py  websocket_managers.py  ws_monitoring.py
delivery/api/dependencies/: __init__.py  area.py  get_pos_terminal_partner_id.py  image.py  item.py  order.py  partner.py  partners_ids.py  postcontrol.py  profile.py  shipment_point.py  statistics.py  token.py  user.py
delivery/api/domain/: pan.py
delivery/api/enums/: __init__.py  config.py  courier_services.py  deliverygraph.py  (+25 more)
delivery/cli/: __init__.py  __main__.py  area.py  fixtures.py  otp.py  user.py
delivery/static/: act_template.css  act_template.html  orders_sample_bank_manager.xlsx  orders_sample_manager_partner.xlsx  orders_sample_service_manager.xlsx  user_personal_agreement.css  user_personal_agreement_template.html
delivery/tests/: conftest.py
delivery/translator/: _helpers.py  base.py  handler.py  middleware.py  translator.py
(+1091 files in other folders)
